# CliffMetrics

./: CMakeLists.txt  README.md  cliffmetrics.h  cliffmetrics.ini  create_profiles.cpp  delineation.cpp  delineation.h  gis_raster.cpp  gis_utils.cpp  gis_vector.cpp  install_manifest.txt  locate_clifftop.cpp  locate_coast.cpp  profile.cpp  profile.h  read_input.cpp  utils.cpp  write_output.cpp
in/simple_fast/: .directory  chain_coastline.dbf  chain_coastline.shp  chain_coastline.shx  simple_fast (copy).dat~  simple_fast.dat~  simple_fast.qgs~  two_bays.asc.aux.xml
